--- a/JavaApplication43/nbproject/project.properties
+++ b/JavaApplication43/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=BecaProyecto
-main.class=javaapplication43.Main
+main.class=Aplications.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
