--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ hs_err_pid*
 replay_pid*
 /JavaApplication43/nbproject/private/
 /JavaApplication43/build/
+/ArrrayList/nbproject/private/
+/Data.Structures/nbproject/private/
+/Data.Structures/build/
