--- a/Data.Structures/nbproject/project.properties
+++ b/Data.Structures/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/BecaProyecto.jar
+dist.jar=${dist.dir}/Data.Structures.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/BecaProyecto
+dist.jlink.output=${dist.jlink.dir}/Data.Structures
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=BecaProyecto
-main.class=Aplications.Main
+jlink.launcher.name=Data.Structures
+main.class=arrraylist.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
