--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ replay_pid*
 /ArrrayList/nbproject/private/
 /Data.Structures/nbproject/private/
 /Data.Structures/build/
+/PearsonAlgorithms/nbproject/private/
