--- a/Data.Structures/nbproject/project.properties
+++ b/Data.Structures/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Data.Structures
-main.class=arrraylist.main
+main.class=arrraylist.mainQueue
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
