--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ replay_pid*
 /Data.Structures/nbproject/private/
 /Data.Structures/build/
 /PearsonAlgorithms/nbproject/private/
+/Division/nbproject/private/
+/Division/build/
