--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ replay_pid*
 /PearsonAlgorithms/nbproject/private/
 /Division/nbproject/private/
 /Division/build/
+/JavaApplication47/nbproject/private/
+/JavaApplication47/build/
