--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ replay_pid*
 /JavaApplication47/nbproject/private/
 /JavaApplication47/build/
 /AAA/nbproject/private/
+/Nonagrama/nbproject/private/
+/Nonagrama/build/
